--- a/BlazorId/Client/Shared/NavMenu.razor
+++ b/BlazorId/Client/Shared/NavMenu.razor
@@ -21,21 +21,32 @@
                     </NavLink>
                 </div>
 
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="users">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Users
-                    </NavLink>
-                </div>  
+                
         </AuthorizeView>
         <AuthorizeView>
             <Authorized>
-                <div class="nav-item px-3">
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="users">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Users
+                        </NavLink>
+                    </div>
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="categories">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Categories
+                        </NavLink>
+                    </div>
+                    <div class="nav-item px-3">
                     <NavLink class="nav-link" href="claims">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Claims
                     </NavLink>
                 </div>
             </Authorized>
              <NotAuthorized>
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="trainings">
+                            <span class="oi oi-plus" aria-hidden="true"></span> Trainings
+                        </NavLink>
+                    </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="counter">
                         <span class="oi oi-plus" aria-hidden="true"></span> Counter
