--- a/BlazorId/Client/Shared/NavMenu.razor
+++ b/BlazorId/Client/Shared/NavMenu.razor
@@ -7,54 +7,58 @@
     </div>
 </div>
 <CascadingAuthenticationState>
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <AuthorizeView Roles="Administrator">              
+    <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+        <nav class="flex-column">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
+            <AuthorizeView Roles="Administrator">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="categories">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Categories
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="categorytrainings">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Trainings
+                    </NavLink>
+                </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="fetchdata">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                     </NavLink>
                 </div>
-
-                
-        </AuthorizeView>
-        <AuthorizeView>
-            <Authorized>
+            </AuthorizeView>
+            <AuthorizeView>
+                <Authorized>
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="users">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Users
                         </NavLink>
                     </div>
+
                     <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="categories">
-                            <span class="oi oi-list-rich" aria-hidden="true"></span> Categories
+                        <NavLink class="nav-link" href="claims">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Claims
                         </NavLink>
                     </div>
-                    <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="claims">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Claims
-                    </NavLink>
-                </div>
-            </Authorized>
-             <NotAuthorized>
+                </Authorized>
+                <NotAuthorized>
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="trainings">
-                            <span class="oi oi-plus" aria-hidden="true"></span> Trainings
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Trainings
                         </NavLink>
                     </div>
-                <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="counter">
-                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </div>
-            </NotAuthorized>
-        </AuthorizeView>
-    </nav>
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link" href="counter">
+                            <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                        </NavLink>
+                    </div>
+                </NotAuthorized>
+            </AuthorizeView>
+        </nav>
     </div>
 </CascadingAuthenticationState>
 
