--- a/BlazorId/Client/Shared/NavMenu.razor
+++ b/BlazorId/Client/Shared/NavMenu.razor
@@ -26,8 +26,8 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="fetchdata">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                    <NavLink class="nav-link" href="classrooms">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Classrooms
                     </NavLink>
                 </div>
             </AuthorizeView>
@@ -37,8 +37,7 @@
                         <NavLink class="nav-link" href="users">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Users
                         </NavLink>
-                    </div>
-
+                    </div>           
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="claims">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Claims
@@ -50,12 +49,7 @@
                         <NavLink class="nav-link" href="trainings">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Trainings
                         </NavLink>
-                    </div>
-                    <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="counter">
-                            <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                        </NavLink>
-                    </div>
+                    </div>                   
                 </NotAuthorized>
             </AuthorizeView>
         </nav>
