--- a/BlazorId/Client/Pages/Admin/Categories.razor
+++ b/BlazorId/Client/Pages/Admin/Categories.razor
@@ -21,7 +21,7 @@ else
             @foreach (var category in categories)
             {
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="card">
+                    <div class="card bg-light">
                         <div class="card-body">
                             <input class="form-control" type="text"
                                    placeholder="Name"
