--- a/BlazorId/Client/Shared/NavMenu.razor
+++ b/BlazorId/Client/Shared/NavMenu.razor
@@ -30,6 +30,11 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Classrooms
                     </NavLink>
                 </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="courses">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Courses
+                    </NavLink>
+                </div>
             </AuthorizeView>
             <AuthorizeView>
                 <Authorized>
